# torch-dlsvm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci_test.yml
src/ptdlsvm/: train.py
src/ptdlsvm/feature/: extraction.py  utils.py
src/ptdlsvm/model/: loss.py  svm.py
test/: test_bow_extractor.py  test_iris.py
